<resources>
    <string name="app_name">UpdateAddress App</string>
    <string name="address_line1_hint">Street, P.O. box, company name, c/o</string>
    <string name="address_line2_hint">Apartment, suite, unit, building, floor, etc.</string>
    <string name="city">City</string>
    <string name="state_province_Region">State/Province/Region</string>
    <string name="postal_code">Postal code</string>
    <string name="Country">Country</string>

    <string name="err_address_line1_hint">Please enter valid street name</string>
    <string name="err_address_line2_hint">Invalid address line 2</string>
    <string name="err_city">Invalid city</string>
    <string name="err_state_province_Region">Invalid state</string>
    <string name="err_postal_code">Wrong postal code</string>
    <string name="err_Country">Please select a country</string>
</resources>
