<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ufs.stella.updateaddressapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/postal_address1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line1_hint"
            android:inputType="textPostalAddress|textCapWords|textNoSuggestions" />

        <EditText
            android:id="@+id/postal_address2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line2_hint"
            android:inputType="textPostalAddress|textCapWords|textNoSuggestions" />

        <EditText
            android:id="@+id/city"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textCapWords|textNoSuggestions" />

        <EditText
            android:id="@+id/state_province_region"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state_province_Region"
            android:inputType="textCapWords|textNoSuggestions" />

        <EditText
            android:id="@+id/postal_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postal_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/Country"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Country"
            android:inputType="textCapWords|textNoSuggestions" />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Submit"
        android:layout_alignBaseline="@+id/clear"
        android:layout_alignBottom="@+id/clear"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Clear"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
